[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://screens/LevelCard.tscn" type="PackedScene" id=2]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.247059, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/GridContainer"]

[node name="LevelCodeEdit" type="LineEdit" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 208.0
margin_top = 48.0
margin_right = 608.0
margin_bottom = 80.0
placeholder_text = "Get level codes by playing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCodeLabel" type="Label" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 112.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 79.0
text = "Level Code:"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 624.0
margin_top = 48.0
margin_right = 688.0
margin_bottom = 80.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCodeMessage" type="Label" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 208.0
margin_top = 96.0
margin_right = 319.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 32.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 246.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroButton" type="Button" parent="CanvasLayer/GridContainer/Panel/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 64, 96 )
text = "Play Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Card" parent="CanvasLayer/GridContainer/Panel" instance=ExtResource( 2 )]
margin_left = 208.0
margin_top = 160.0
margin_right = 208.0
margin_bottom = 160.0
level = 1

[node name="Level Card2" parent="CanvasLayer/GridContainer/Panel" instance=ExtResource( 2 )]
margin_left = 400.0
margin_top = 160.0
margin_right = 400.0
margin_bottom = 160.0
level = 2

[node name="Level Card3" parent="CanvasLayer/GridContainer/Panel" instance=ExtResource( 2 )]
margin_left = 592.0
margin_top = 160.0
margin_right = 592.0
margin_bottom = 160.0
level = 3

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 32.0
margin_top = 128.0
margin_right = 768.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/GridContainer/Panel/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Panel/PanelContainer/IntroButton" to="." method="_on_IntroButton_pressed"]
